# chief-risk-bot

./: .env.example  .gitignore  ARCHITECTURE.md  BACKEND_PLAN.md  CLAUDE.md  CODEBASE_STATUS.md  ChiefRiskBot_Honest_Assessment.md  DESIGN.md  Dockerfile  FRONTEND_AUDIT.md  MVP2_SPEC.md  MVP2_STATUS.md  README.md  alembic.ini  codex_log  fly.toml  package-lock.json  package.json  pyproject.toml
.claude/: launch.json  serve.js  settings.local.json
MVP2_codebase/: README.md  alembic.ini
admin/: agent_improvement_loop.sh
backend/: __init__.py  config.py  constants.py  database.py  deps.py  main.py  paths.py
docs/: ANALYTICS_POLICY.md  ENVIRONMENTS.md  PRODUCT_ELEMENT_LOG.md  PRODUCT_REMEDIATION_PLAN.md  SETTINGS_MATRIX.md
frontend/: _api.js  _app.js  _headers  _shell.css  _shell.js  _tokens.css  assets.html  briefing.html  briefings.html  cockpit.html  documents.html  index.html  liquidity.html  login.html  onboarding.html  settings.html  table.html  wrangler.toml
frontend-design-ideal/: 500.html  components.html  empty-states.html  invite.html  maintenance.html  members.html  sources.html  table.html
frontend-mvp/: _app.js  _headers  _mvp.css  _shell.css  _shell.js  _tokens.css  access.html  assets.html  briefing.html  briefings.html  cockpit.html  documents.html  index.html  legal.html  liquidity.html  login.html  onboarding.html  overlay.html  scenarios.html  settings.html  table.html
frontend-mvp-archive/: _mvp.css  briefing.html  briefings.html  cockpit.html  documents.html  index.html  login.html  onboarding.html  settings.html  table.html
mvp/: run.sh  (+5 more)
(+266 files in other folders)
